# final-backend-project

./: .dockerignore  .gitignore  DDL.txt  Dockerfile  README.md  data.py  docker-compose.yml  er_model_db.drawio  example_data.py  main.py  pyproject.toml  requirements.txt  tox.ini  utils_db.py
.github/workflows/: ci.yml
app/: auth.py  models.py  routes.py  utils_db.py
app/auth/: auth.py
app/routes/: document_routes.py  project_routes.py  user_routes.py
app/utils_db/: session_singleton.py  utils_db.py
app/utils_db/utils_db_document/: utils_db_document.py  utils_db_document_impl.py
app/utils_db/utils_db_project/: utils_db_project.py  utils_db_project_impl.py
app/utils_db/utils_db_user/: utils_db_user.py  utils_db_user_impl.py
database/: db_ddl.py  db_dml.py  db_orm.py
db/: ddl.py  dml.py  orm.py
src/: main.py
src/app/auth/: auth.py
src/app/routes/: document_routes.py  project_routes.py  user_routes.py
src/app/utils_db/: session_singleton.py  utils_db.py
src/app/utils_db/utils_db_document/: utils_db_document.py  utils_db_document_impl.py
src/app/utils_db/utils_db_project/: utils_db_project.py  utils_db_project_impl.py
src/app/utils_db/utils_db_user/: utils_db_user.py  utils_db_user_impl.py
src/db/: orm.py  s3.py
tests/tests_routes/: test_document_routes.py  test_project_routes.py  test_user_routes.py
tests/tests_utils_db/: test_document_impl.py  test_project_impl.py  test_user_impl.py
