[project]
name = "src"
version = "0.1.0"
description = "Final backend project - Web app with FastApi-Postgres-S3 implementation."
authors = [
    {name = "Angel F. Gomez E."}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "tox (>=4.32.0,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "boto3 (>=1.40.69,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
